--- a/BusChecker/settings.gradle
+++ b/BusChecker/settings.gradle
@@ -5,9 +5,9 @@ pluginManagement {
         mavenCentral()
     }
     plugins {
-        id 'com.android.application' version '7.2.2'
-        id 'com.android.library' version '7.2.2'
-        id 'org.jetbrains.kotlin.android' version '1.7.10'
+        id 'com.android.application' version '7.1.0-alpha11'
+        id 'com.android.library' version '7.1.0-alpha11'
+        id 'org.jetbrains.kotlin.android' version '1.7.20-RC'
     }
 }
 dependencyResolutionManagement {
