Probando agregar pantalla agregar unidad

--- a/MyBus/app/src/main/AndroidManifest.xml
+++ b/MyBus/app/src/main/AndroidManifest.xml
@@ -12,6 +12,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyBus"
         tools:targetApi="31">
+
+        <activity
+            android:name=".altaUnidad"
+            android:exported="false" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
