--- a/BusChecker/app/build.gradle
+++ b/BusChecker/app/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.example.inicio"
+        applicationId "com.example.BusChecker"
         minSdk 21
         targetSdk 33
         versionCode 1
